added leading animation

--- a/index.html
+++ b/index.html
@@ -78,8 +78,14 @@
         </label>
         <!-- items section -->
         <section class="my-[120px]">
+            <div id="loading-animation" class="text-center text-[#0D6EFD] hidden">
+                <span class="loading loading-infinity loading-lg"></span>
+            </div>
             <div id="phone-container" class="grid grid-cols-3 gap-6">
             </div>
+            <div id="show-all-container" class="text-center my-[50px] hidden">
+                <button id="show-all" class="btn text-[20px] text-white  bg-[#0D6EFD] hover:bg-blue-700 px-8">Show
+                    All</button>
             </div>
         </section>
     </main>
