--- a/index.html
+++ b/index.html
@@ -78,13 +78,17 @@
         </label>
         <!-- items section -->
         <section class="my-[120px]">
+            <!-- loading animation -->
             <div id="loading-animation" class="text-center text-[#0D6EFD] hidden">
                 <span class="loading loading-infinity loading-lg"></span>
             </div>
+            <!-- showing phone data -->
             <div id="phone-container" class="grid grid-cols-3 gap-6">
             </div>
+            <!-- show all button -->
             <div id="show-all-container" class="text-center my-[50px] hidden">
-                <button id="show-all" class="btn text-[20px] text-white  bg-[#0D6EFD] hover:bg-blue-700 px-8">Show
+                <button onclick="showAll()" id="show-all"
+                    class="btn text-[20px] text-white  bg-[#0D6EFD] hover:bg-blue-700 px-8">Show
                     All</button>
             </div>
         </section>
