added feature details modal

--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
                     All</button>
             </div>
         </section>
+        <!-- modal design -->
+        <!-- Open the modal using ID.showModal() method -->
+        <!-- <button class="btn" onclick="details.showModal()">open modal</button> -->
+        <dialog id="details" class="modal modal-bottom sm:modal-middle">
+            <div id="details-container" class="modal-box">
+
+            </div>
+        </dialog>
     </main>
     <!-- footer section -->
     <footer>
